--- a/env.yml
+++ b/env.yml
@@ -1,317 +1,104 @@
 name: visdial-bert
 channels:
-  - anaconda
-  - conda-forge
+  - pytorch
   - defaults
 dependencies:
-  - _anaconda_depends=5.1.0=py36_2
-  - _ipyw_jlab_nb_ext_conf=0.1.0=py36he11e457_0
   - _libgcc_mutex=0.1=main
-  - alabaster=0.7.10=py36h306e16b_0
-  - anaconda=custom=py36_1
-  - anaconda-client=1.6.5=py36h19c0dcd_0
-  - anaconda-project=0.8.0=py36h29abdf5_0
-  - asn1crypto=0.22.0=py36h265ca7c_1
-  - astroid=1.5.3=py36hbdb9df2_0
-  - astropy=2.0.2=py36ha51211e_4
-  - attrs=19.1.0=py36_1
-  - babel=2.5.0=py36h7d14adf_0
-  - backports=1.0=py36hfa02d7e_1
-  - backports.shutil_get_terminal_size=1.0.0=py36hfea85ff_2
-  - beautifulsoup4=4.6.0=py36h49b8c8c_1
-  - bitarray=0.8.1=py36h5834eb8_0
-  - bkcharts=0.2=py36h735825a_0
   - blas=1.0=mkl
-  - blaze=0.11.3=py36h4e06776_0
-  - bleach=2.0.0=py36h688b259_0
-  - bokeh=0.12.10=py36hbb0e44a_0
-  - boto=2.48.0=py36h6e4cd66_1
-  - bottleneck=1.2.1=py36haac1ea0_0
-  - bzip2=1.0.6=h0376d23_1
-  - ca-certificates=2019.9.11=hecc5488_0
-  - cairo=1.14.10=haa5651f_5
-  - certifi=2019.9.11=py36_0
-  - cffi=1.10.0=py36had8d393_1
-  - chardet=3.0.4=py36h0f667ec_1
-  - click=6.7=py36h5253387_0
-  - cloudpickle=0.4.0=py36h30f8c20_0
-  - clyent=1.2.2=py36h7e57e65_1
-  - colorama=0.3.9=py36h489cec4_0
-  - conda=4.7.12=py36_0
-  - conda-build=3.0.27=py36h940a66d_0
-  - conda-env=2.6.0=1
-  - conda-package-handling=1.3.11=py36_0
-  - conda-verify=2.0.0=py36h98955d8_0
-  - contextlib2=0.5.5=py36h6c84a62_0
-  - cryptography=2.0.3=py36ha225213_1
-  - cudatoolkit=9.2=0
-  - curl=7.55.1=hcb0b314_2
-  - cycler=0.10.0=py36h93f1223_0
-  - cython=0.26.1=py36h21c49d0_0
-  - cytoolz=0.8.2=py36h708bfd4_0
-  - dask=0.15.3=py36hdc2c8aa_0
-  - dask-core=0.15.3=py36h10e6167_0
-  - datashape=0.5.4=py36h3ad6b5c_0
-  - dbus=1.10.22=h3b5a359_0
-  - decorator=4.1.2=py36hd076ac8_0
-  - distributed=1.19.1=py36h25f3894_0
-  - docutils=0.14=py36hb0f60f5_0
-  - entrypoints=0.2.3=py36h1aec115_2
-  - et_xmlfile=1.0.1=py36hd6bccc3_0
-  - expat=2.2.5=hfc679d8_2
-  - fastcache=1.0.2=py36h5b0c431_0
-  - filelock=2.0.12=py36hacfa1f5_0
-  - flask=0.12.2=py36hb24657c_0
-  - flask-cors=3.0.3=py36h2d857d3_0
-  - fontconfig=2.12.4=h88586e7_1
-  - freetype=2.8=h52ed37b_0
-  - get_terminal_size=1.0.0=haa9412d_0
-  - gevent=1.2.2=py36h2fe25dc_0
-  - glib=2.53.6=hc861d11_1
-  - glob2=0.5=py36h2c1b292_1
-  - gmp=6.1.2=hb3b607b_0
-  - gmpy2=2.0.8=py36h55090d7_1
-  - graphite2=1.3.10=hc526e54_0
-  - greenlet=0.4.12=py36h2d503a6_0
-  - gst-plugins-base=1.12.2=he3457e5_0
-  - gstreamer=1.12.2=h4f93127_0
-  - h5py=2.7.0=py36he81ebca_1
-  - harfbuzz=1.5.0=h2545bd6_0
-  - hdf5=1.10.1=hb0523eb_0
-  - heapdict=1.0.0=py36h79797d7_0
-  - html5lib=0.999999999=py36h2cfc398_0
-  - icu=58.2=h211956c_0
-  - idna=2.6=py36h82fb2a8_1
-  - imageio=2.2.0=py36he555465_0
-  - imagesize=0.7.1=py36h52d8127_0
-  - importlib_metadata=0.17=py36_1
-  - intel-openmp=2018.0.0=h15fc484_7
-  - ipykernel=4.6.1=py36hbf841aa_0
-  - ipython=6.1.0=py36hc72a948_1
-  - ipython_genutils=0.2.0=py36hb52b0d5_0
-  - ipywidgets=7.0.0=py36h7b55c3a_0
-  - isort=4.2.15=py36had401c0_0
-  - itsdangerous=0.24=py36h93cc618_1
-  - jbig=2.1=hdba287a_0
-  - jdcal=1.3=py36h4c697fb_0
-  - jedi=0.10.2=py36h552def0_0
-  - jinja2=2.9.6=py36h489bce4_1
-  - jpeg=9b=habf39ab_1
-  - jsonlines=1.2.0=py_1
-  - jsonschema=2.6.0=py36h006f8b5_0
-  - jupyter=1.0.0=py36h9896ce5_0
-  - jupyter_client=5.1.0=py36h614e9ea_0
-  - jupyter_console=5.2.0=py36he59e554_1
-  - jupyter_core=4.3.0=py36h357a921_0
-  - jupyterlab=0.27.0=py36h86377d0_2
-  - jupyterlab_launcher=0.4.0=py36h4d8058d_0
-  - lazy-object-proxy=1.3.1=py36h10fcdad_0
-  - libarchive=3.3.3=h823be47_0
-  - libcurl=7.61.0=h1ad7b7a_0
-  - libedit=3.1=heed3624_0
-  - libffi=3.2.1=h4deb6c0_3
-  - libgcc-ng=7.2.0=h7cc24e2_2
-  - libgfortran-ng=7.2.0=h9f7466a_2
-  - libiconv=1.15=h470a237_4
-  - libpng=1.6.32=hda9c8bc_2
-  - libsodium=1.0.13=h31c71d8_2
-  - libssh2=1.8.0=h8c220ad_2
-  - libstdcxx-ng=7.2.0=h7a57d05_2
-  - libtiff=4.0.8=h90200ff_9
-  - libtool=2.4.6=hd50d1a6_0
-  - libxcb=1.12=h84ff03f_3
-  - libxml2=2.9.4=h6b072ca_5
-  - libxslt=1.1.29=hcf9102b_5
-  - llvmlite=0.20.0=py36_0
-  - locket=0.2.0=py36h787c0ad_1
-  - lxml=4.1.0=py36h5b66e50_0
-  - lzo=2.10=h1bfc0ba_1
-  - markupsafe=1.0=py36hd9260cd_1
-  - matplotlib=2.1.0=py36hba5de38_0
-  - mccabe=0.6.1=py36h5ad9710_1
-  - mistune=0.7.4=py36hbab8784_0
-  - mkl=2018.0.0=hb491cac_4
-  - mkl-service=1.1.2=py36h17a0993_4
-  - mpc=1.0.3=hf803216_4
-  - mpfr=3.1.5=h12ff648_1
-  - mpmath=0.19=py36h8cc018b_2
-  - msgpack-python=0.4.8=py36hec4c5d1_0
-  - multipledispatch=0.4.9=py36h41da3fb_0
-  - navigator-updater=0.1.0=py36h14770f7_0
-  - nb_conda=2.2.1=py36_0
-  - nb_conda_kernels=2.2.2=py36_0
-  - nbconvert=5.3.1=py36hb41ffb7_0
-  - nbformat=4.4.0=py36h31c9010_0
-  - ncurses=6.0=h06874d7_1
-  - networkx=2.0=py36h7e96fb8_0
-  - nltk=3.2.4=py36h1a0979f_0
-  - nose=1.3.7=py36hcdf7029_2
-  - notebook=5.0.0=py36h0b20546_2
-  - numba=0.35.0=np113py36_10
-  - numexpr=2.6.2=py36hdd3393f_1
-  - numpydoc=0.7.0=py36h18f165f_0
-  - odo=0.5.1=py36h90ed295_0
-  - olefile=0.44=py36h79f9f78_0
-  - openpyxl=2.4.8=py36h41dd2a8_1
-  - openssl=1.0.2p=h470a237_2
-  - packaging=16.8=py36ha668100_1
-  - pandas=0.20.3=py36h842e28d_2
-  - pandoc=1.19.2.1=hea2e7c5_1
-  - pandocfilters=1.4.2=py36ha6701b7_1
-  - pango=1.40.11=h8191d47_0
-  - parso=0.5.0=py_0
-  - partd=0.3.8=py36h36fd896_0
-  - patchelf=0.9=hf79760b_2
-  - path.py=10.3.1=py36he0c6f6d_0
-  - pathlib2=2.3.0=py36h49efa8e_0
-  - patsy=0.4.1=py36ha3be15e_0
-  - pcre=8.41=hc71a17e_0
-  - pep8=1.7.0=py36h26ade29_0
-  - pexpect=4.2.1=py36h3b9d41b_0
-  - pickleshare=0.7.4=py36h63277f8_0
-  - pillow=4.2.1=py36h9119f52_0
-  - pixman=0.34.0=h83dc358_2
-  - pkginfo=1.4.1=py36h215d178_1
-  - pluggy=0.12.0=py_0
-  - ply=3.10=py36hed35086_0
-  - prompt_toolkit=1.0.15=py36h17d85b1_0
-  - psutil=5.4.0=py36h84c53db_0
-  - ptyprocess=0.5.2=py36h69acd42_0
-  - py=1.4.34=py36h0712aa3_1
-  - pycodestyle=2.3.1=py36hf609f19_0
-  - pycosat=0.6.3=py36h470a237_1
-  - pycparser=2.18=py36hf9f622e_1
-  - pycrypto=2.6.1=py36h6998063_1
-  - pycurl=7.43.0=py36h5e72054_3
-  - pyflakes=1.6.0=py36h7bd6a15_0
-  - pygments=2.2.0=py36h0d3125c_0
-  - pylint=1.8.1=py36_0
-  - pyodbc=4.0.17=py36h999153c_0
-  - pyopenssl=17.2.0=py36h5cc804b_0
-  - pyparsing=2.2.0=py36hee85983_1
-  - pyqt=5.6.0=py36h0386399_5
-  - pysocks=1.6.7=py36hd97a5b1_1
-  - pytables=3.4.2=py36h3b5282a_2
-  - pytest=3.2.1=py36h11ad3bb_1
-  - python=3.6.3=hc9025b9_1
-  - python-dateutil=2.6.1=py36h88d3b88_1
-  - python-libarchive-c=2.8=py36_1004
-  - pytz=2017.2=py36hc2ccc2a_1
-  - pywavelets=0.5.2=py36he602eb0_0
-  - pyyaml=3.12=py36hafb9ca4_1
-  - pyzmq=16.0.2=py36h3b0cf96_2
-  - qt=5.6.2=h974d657_12
-  - qtawesome=0.4.4=py36h609ed8c_0
-  - qtconsole=4.3.1=py36h8f73b5b_0
-  - qtpy=1.3.1=py36h3691cc8_0
-  - readline=7.0=hac23ff0_3
-  - requests=2.18.4=py36he2e5f8d_1
-  - rope=0.10.5=py36h1f8c17e_0
-  - ruamel_yaml=0.11.14=py36ha2fb22d_2
-  - scikit-image=0.13.0=py36had3c07a_1
-  - scikit-learn=0.19.1=py36h7aa7ec6_0
-  - scipy=0.19.1=py36h9976243_3
-  - seaborn=0.8.0=py36h197244f_0
-  - send2trash=1.5.0=py36_0
-  - setuptools=36.5.0=py36he42e2e1_0
-  - simplegeneric=0.8.1=py36h2cb9092_0
-  - singledispatch=3.4.0.3=py36h7a266c3_0
-  - sip=4.18.1=py36h51ed4ed_2
-  - six=1.11.0=py36h372c433_1
-  - snowballstemmer=1.2.1=py36h6febd40_0
-  - sortedcollections=0.5.3=py36h3c761f9_0
-  - sortedcontainers=1.5.7=py36hdf89491_0
-  - sphinx=1.6.3=py36he5f0bdb_0
-  - sphinxcontrib=1.0=py36h6d0f590_1
-  - sphinxcontrib-websupport=1.0.1=py36hb5cb234_1
-  - spyder=3.2.4=py36hbe6152b_0
-  - sqlalchemy=1.1.13=py36hfb5efd7_0
-  - sqlite=3.20.1=h6d8b0f3_1
-  - statsmodels=0.8.0=py36h8533d0b_0
-  - sympy=1.1.1=py36hc6d1c1c_0
-  - tblib=1.3.2=py36h34cf8b6_0
-  - terminado=0.6=py36ha25a19f_0
-  - testpath=0.3.1=py36h8cadb63_0
-  - tk=8.6.7=h5979e9b_1
-  - toolz=0.8.2=py36h81f2dff_0
-  - torchfile=0.1.0=py_0
-  - tornado=4.5.2=py36h1283b2a_0
-  - tqdm=4.32.2=py_0
-  - traitlets=4.3.2=py36h674d592_0
-  - typing=3.6.2=py36h7da032a_0
-  - unicodecsv=0.14.1=py36ha668878_0
-  - unixodbc=2.3.4=hc36303a_1
-  - urllib3=1.22=py36hbe7ace6_0
-  - visdom=0.1.8.8=0
-  - wcwidth=0.1.7=py36hdf4376a_0
-  - webencodings=0.5.1=py36h800622e_1
-  - websocket-client=0.56.0=py36_0
-  - werkzeug=0.12.2=py36hc703753_0
-  - wheel=0.29.0=py36he7f4e38_1
-  - widgetsnbextension=3.0.2=py36hd01bb71_1
-  - wrapt=1.10.11=py36h28b7045_0
-  - xlrd=1.1.0=py36h1db9f0c_1
-  - xlsxwriter=1.0.2=py36h3de1aca_0
-  - xlwt=1.3.0=py36h7b00a1f_0
-  - xz=5.2.4=h470a237_1
-  - yaml=0.1.7=h96e3832_1
-  - zeromq=4.2.2=hb0b69da_1
-  - zict=0.1.3=py36h3a3bf81_0
-  - zipp=0.5.1=py_0
-  - zlib=1.2.11=hfbfcf68_1
+  - ca-certificates=2019.11.27=0
+  - certifi=2019.11.28=py36_0
+  - cffi=1.13.2=py36h2e261b9_0
+  - cudatoolkit=10.0.130=0
+  - freetype=2.9.1=h8a8886c_1
+  - intel-openmp=2019.4=243
+  - jpeg=9b=h024ee3a_2
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_0
+  - mkl=2019.4=243
+  - mkl-service=2.3.0=py36he904b0f_0
+  - mkl_fft=1.0.15=py36ha843d7b_0
+  - mkl_random=1.1.0=py36hd6b4f25_0
+  - ncurses=6.1=he6710b0_1
+  - ninja=1.9.0=py36hfd86e86_0
+  - numpy-base=1.17.4=py36hde5b4d6_0
+  - olefile=0.46=py36_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pillow=6.2.1=py36h34e0f95_0
+  - pip=19.3.1=py36_0
+  - pycparser=2.19=py36_0
+  - python=3.6.9=h265db76_0
+  - pytorch=1.3.1=py3.6_cuda10.0.130_cudnn7.6.3_0
+  - readline=7.0=h7b6447c_5
+  - setuptools=42.0.2=py36_0
+  - six=1.13.0=py36_0
+  - sqlite=3.30.1=h7b6447c_0
+  - tk=8.6.8=hbc83047_0
+  - torchvision=0.4.2=py36_cu100
+  - wheel=0.33.6=py36_0
+  - xz=5.2.4=h14c3975_4
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.3.7=h0b5b093_0
   - pip:
-    - anykeystore==0.2
-    - apex==0.1
-    - blis==0.2.4
-    - boto3==1.9.180
-    - botocore==1.12.180
-    - cryptacular==1.5.5
-    - cymem==2.0.2
-    - defusedxml==0.6.0
+    - absl-py==0.8.1
+    - astor==0.8.1
+    - boto3==1.10.36
+    - botocore==1.13.36
+    - chardet==3.0.4
+    - click==7.0
+    - cycler==0.10.0
+    - cython==0.29.14
+    - docutils==0.15.2
     - easydict==1.9
-    - ftfy==4.4.3
-    - hupper==1.8.1
+    - gast==0.3.2
+    - grpcio==1.25.0
+    - h5py==2.10.0
+    - idna==2.8
     - jmespath==0.9.4
-    - joblib==0.13.2
+    - joblib==0.14.1
     - json-lines==0.5.0
-    - lmdb==0.97
-    - murmurhash==1.0.2
-    - numpy==1.16.4
-    - oauthlib==3.0.2
-    - opencv-python==4.1.1.26
-    - pastedeploy==2.0.1
-    - pbkdf2==1.3
-    - pip==19.2.3
-    - plac==0.9.6
-    - plaster==1.0
-    - plaster-pastedeploy==0.7
-    - preshed==2.0.1
-    - protobuf==3.10.0
-    - pyramid==1.10.4
-    - pyramid-mailer==0.15.1
-    - python3-openid==3.1.0
+    - jsonlines==1.2.0
+    - jsonpatch==1.24
+    - jsonpointer==2.0
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - kiwisolver==1.1.0
+    - lmdb==0.94
+    - markdown==3.1.1
+    - matplotlib==3.1.2
+    - mock==3.0.5
+    - msgpack==0.6.2
+    - msgpack-numpy==0.4.4.3
+    - numpy==1.17.4
+    - protobuf==3.11.1
+    - pyparsing==2.4.5
+    - python-dateutil==2.8.0
+    - python-prctl==1.7
     - pytorch-pretrained-bert==0.6.2
     - pytorch-transformers==1.2.0
-    - regex==2019.6.8
-    - repoze-sendmail==4.4.1
-    - requests-oauthlib==1.2.0
+    - pyyaml==5.1.2
+    - pyzmq==18.1.1
+    - regex==2019.12.9
+    - requests==2.22.0
     - s3transfer==0.2.1
-    - sacremoses==0.0.33
-    - sentencepiece==0.1.82
-    - spacy==2.1.4
-    - srsly==0.0.7
-    - thinc==7.0.4
-    - torch==1.1.0
-    - transaction==2.4.0
-    - translationstring==1.3
-    - velruse==1.1.1
-    - venusian==1.2.0
-    - wasabi==0.2.2
-    - webob==1.8.5
-    - wtforms==2.2.1
-    - wtforms-recaptcha==0.3.2
-    - zope-deprecation==4.4.0
-    - zope-interface==4.6.0
-    - zope-sqlalchemy==1.1
-prefix: /nethome/vmurahari3/anaconda3
-
+    - sacremoses==0.0.35
+    - scipy==1.3.3
+    - sentencepiece==0.1.83
+    - tabulate==0.8.6
+    - tensorboard==1.13.1
+    - tensorboardx==1.2
+    - tensorflow==1.13.1
+    - tensorflow-estimator==1.13.0
+    - tensorpack==0.9.4
+    - termcolor==1.1.0
+    - torchfile==0.1.0
+    - tornado==6.0.3
+    - tqdm==4.31.1
+    - urllib3==1.25.7
+    - visdom==0.1.8.9
+    - websocket-client==0.56.0
+    - werkzeug==0.16.0
